Java cleanup.