@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2015 American Registry for Internet Numbers (ARIN)
+ * Copyright (C) 2013-2020 American Registry for Internet Numbers (ARIN)
  *
  * Permission to use, copy, modify, and/or distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
@@ -24,12 +24,9 @@ import net.arin.rdap_bootstrap.service.ResourceFiles.BootFiles;
 import net.ripe.ipresource.IpRange;
 import net.ripe.ipresource.UniqueIpResource;
 
-/**
- * @version $Rev$, $Date$
- */
 public class IpV4Bootstrap implements JsonBootstrapFile.Handler
 {
-    private volatile HashMap<String, ServiceUrls> allocations = new HashMap<String, ServiceUrls>();
+    private volatile HashMap<String, ServiceUrls> allocations = new HashMap<>();
     private HashMap<String, ServiceUrls> _allocations;
 
     private ServiceUrls serviceUrls;
@@ -45,7 +42,7 @@ public class IpV4Bootstrap implements JsonBootstrapFile.Handler
     @Override
     public void startServices()
     {
-        _allocations = new HashMap<String, ServiceUrls>();
+        _allocations = new HashMap<>();
     }
 
     @Override
@@ -63,7 +60,7 @@ public class IpV4Bootstrap implements JsonBootstrapFile.Handler
     @Override
     public void endService()
     {
-        // nothing to do
+        // Nothing to do.
     }
 
     @Override
@@ -80,31 +77,30 @@ public class IpV4Bootstrap implements JsonBootstrapFile.Handler
 
     public ServiceUrls getServiceUrls( String prefix )
     {
-
         UniqueIpResource start;
 
         if ( !prefix.contains( "/" ) && prefix.contains( "." ) )
         {
-            // single host
+            // Single host.
             start = UniqueIpResource.parse( prefix );
         }
         else if ( !prefix.contains( "/" ) )
         {
-            // /8 single int behaviour
+            // /8 single int behaviour.
             try
             {
-                new Integer( prefix );
+                Integer.valueOf( prefix );
                 start = IpRange.parse( prefix + ".0.0.0/8" ).getStart();
             }
             catch ( NumberFormatException e )
             {
-                // network
+                // Network.
                 start = IpRange.parse( prefix ).getStart();
             }
         }
         else
         {
-            // network
+            // Network.
             start = IpRange.parse( prefix ).getStart();
         }
 
@@ -114,8 +110,7 @@ public class IpV4Bootstrap implements JsonBootstrapFile.Handler
         for ( String key : keys )
         {
             final IpRange network = IpRange.parse( key );
-            if ( network.contains( start ) && ( resultNetwork.getPrefixLength() < network
-                .getPrefixLength() ) )
+            if ( network.contains( start ) && ( resultNetwork.getPrefixLength() < network.getPrefixLength() ) )
             {
                 resultNetwork = network;
                 resultUrl = allocations.get( key );
